[gd_scene load_steps=16 format=2]

[ext_resource path="res://ChooseMiniGame.gd" type="Script" id=1]
[ext_resource path="res://assets/MainMenu/fonts/power_pixel-7.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sprites/BasquetePreview.png" type="Texture" id=3]
[ext_resource path="res://assets/MainMenu/Selected.png" type="Texture" id=4]
[ext_resource path="res://Sprites/FlorestaPreview.png" type="Texture" id=5]
[ext_resource path="res://Sprites/vinicolaPreview.png" type="Texture" id=6]
[ext_resource path="res://assets/Poderes/bola_de_neve.png" type="Texture" id=7]
[ext_resource path="res://assets/MainMenu/Selected2.png" type="Texture" id=8]
[ext_resource path="res://assets/Poderes/bolaTerra.png" type="Texture" id=9]
[ext_resource path="res://assets/Poderes/garrafa.png" type="Texture" id=10]
[ext_resource path="res://assets/Poderes/laser.png" type="Texture" id=11]
[ext_resource path="res://assets/Poderes/BolaFogo.png" type="Texture" id=12]
[ext_resource path="res://sounds/5413683573293056.wav" type="AudioStream" id=13]

[sub_resource type="DynamicFontData" id=1]

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 2 )
fallback/0 = SubResource( 1 )

[node name="ChooseMiniGame" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.00784314, 0.00784314, 0.00784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choose Mini Game" type="Label" parent="."]
margin_left = 332.001
margin_top = 20.4419
margin_right = 944.001
margin_bottom = 68.4419
custom_fonts/font = SubResource( 2 )
text = "Choose Mini Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Figuras" type="Node2D" parent="."]
position = Vector2( 0, -14.1203 )
__meta__ = {
"_edit_group_": true
}

[node name="Basquete" type="Sprite" parent="Figuras"]
position = Vector2( 130, 98.374 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )
centered = false

[node name="Selected" type="Sprite" parent="Figuras/Basquete"]
scale = Vector2( 8, 8 )
texture = ExtResource( 4 )
centered = false

[node name="Floresta" type="Sprite" parent="Figuras"]
position = Vector2( 480, 98.374 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 5 )
centered = false

[node name="Selected" type="Sprite" parent="Figuras/Floresta"]
scale = Vector2( 8, 8 )
texture = ExtResource( 4 )
centered = false

[node name="Vinicola" type="Sprite" parent="Figuras"]
position = Vector2( 830, 98.374 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 6 )
centered = false

[node name="Selected" type="Sprite" parent="Figuras/Vinicola"]
scale = Vector2( 8, 8 )
texture = ExtResource( 4 )
centered = false

[node name="Basquete3" type="Sprite" parent="Figuras"]
visible = false
position = Vector2( 126.869, 312.854 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )
centered = false

[node name="Selected" type="Sprite" parent="Figuras/Basquete3"]
scale = Vector2( 8, 8 )
texture = ExtResource( 4 )
centered = false

[node name="Vinicola3" type="Sprite" parent="Figuras"]
visible = false
position = Vector2( 476.869, 312.854 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )
centered = false

[node name="Selected" type="Sprite" parent="Figuras/Vinicola3"]
scale = Vector2( 8, 8 )
texture = ExtResource( 4 )
centered = false

[node name="Floresta3" type="Sprite" parent="Figuras"]
visible = false
position = Vector2( 826.869, 312.854 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )
centered = false

[node name="Selected" type="Sprite" parent="Figuras/Floresta3"]
scale = Vector2( 8, 8 )
texture = ExtResource( 4 )
centered = false

[node name="Basquete4" type="Sprite" parent="Figuras"]
visible = false
position = Vector2( 130, 525.683 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )
centered = false

[node name="Selected" type="Sprite" parent="Figuras/Basquete4"]
scale = Vector2( 8, 8 )
texture = ExtResource( 4 )
centered = false

[node name="Vinicola4" type="Sprite" parent="Figuras"]
visible = false
position = Vector2( 480, 525.683 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )
centered = false

[node name="Selected" type="Sprite" parent="Figuras/Vinicola4"]
scale = Vector2( 8, 8 )
texture = ExtResource( 4 )
centered = false

[node name="Floresta4" type="Sprite" parent="Figuras"]
visible = false
position = Vector2( 830, 525.683 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )
centered = false

[node name="Selected" type="Sprite" parent="Figuras/Floresta4"]
scale = Vector2( 8, 8 )
texture = ExtResource( 4 )
centered = false

[node name="Choose Mini Game2" type="Label" parent="."]
margin_left = 330.151
margin_top = 301.482
margin_right = 942.151
margin_bottom = 349.482
custom_fonts/font = SubResource( 2 )
text = "Choose Power"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Poderes" type="Node2D" parent="."]

[node name="BolaNeve" type="Sprite" parent="Poderes"]
position = Vector2( 144.317, 507.016 )
scale = Vector2( 8, 8 )
texture = ExtResource( 7 )

[node name="Selected1" type="Sprite" parent="Poderes/BolaNeve"]
position = Vector2( -0.396667, -0.694168 )
scale = Vector2( 0.172729, 0.303722 )
texture = ExtResource( 4 )

[node name="Selected2" type="Sprite" parent="Poderes/BolaNeve"]
position = Vector2( -0.428688, -0.750214 )
scale = Vector2( 0.178, 0.31 )
texture = ExtResource( 8 )

[node name="BolaTerra" type="Sprite" parent="Poderes"]
position = Vector2( 381.763, 505.524 )
scale = Vector2( 5, 5 )
texture = ExtResource( 9 )

[node name="Selected1" type="Sprite" parent="Poderes/BolaTerra"]
position = Vector2( 2.21243, -0.812279 )
scale = Vector2( 0.276367, 0.485955 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Selected2" type="Sprite" parent="Poderes/BolaTerra"]
position = Vector2( 2.16119, -0.901955 )
scale = Vector2( 0.2848, 0.496 )
texture = ExtResource( 8 )

[node name="garrafa" type="Sprite" parent="Poderes"]
position = Vector2( 576.019, 512.224 )
scale = Vector2( 5, 5 )
texture = ExtResource( 10 )

[node name="Selected1" type="Sprite" parent="Poderes/garrafa"]
position = Vector2( 13.8247, -2.47816 )
scale = Vector2( 0.276367, 0.485955 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Selected2" type="Sprite" parent="Poderes/garrafa"]
position = Vector2( 14.2775, -2.06387 )
scale = Vector2( 0.2848, 0.496 )
texture = ExtResource( 8 )

[node name="laser" type="Sprite" parent="Poderes"]
position = Vector2( 893.748, 503.591 )
scale = Vector2( 5.38979, 3.98294 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="Selected1" type="Sprite" parent="Poderes/laser"]
position = Vector2( 0.559265, -0.875343 )
scale = Vector2( 0.25638, 0.610045 )
texture = ExtResource( 4 )

[node name="Selected2" type="Sprite" parent="Poderes/laser"]
position = Vector2( 0.511749, -0.987915 )
scale = Vector2( 0.264203, 0.622655 )
texture = ExtResource( 8 )

[node name="BolaFogo" type="Sprite" parent="Poderes"]
position = Vector2( 1061.94, 457.095 )
scale = Vector2( 5.04959, 5.19835 )
texture = ExtResource( 12 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 32, 16 )
__meta__ = {
"_edit_group_": true
}

[node name="Selected1" type="Sprite" parent="Poderes/BolaFogo"]
position = Vector2( 16.4771, 8.33981 )
scale = Vector2( 0.273653, 0.467413 )
texture = ExtResource( 4 )

[node name="Selected2" type="Sprite" parent="Poderes/BolaFogo"]
position = Vector2( 16.4264, 8.25356 )
scale = Vector2( 0.282003, 0.477075 )
texture = ExtResource( 8 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -13.0
pitch_scale = 1.25
autoplay = true

